# rust-seq2kminmers

./: Cargo.toml  PROFILING  README.md
benches/: bench.rs
src/: hpc.rs  kminmer.rs  lib.rs  main.rs  nthash2_avx512_32.rs  nthash_avx512_32.rs  nthash_c.rs  nthash_hpc.rs  nthash_hpc_simd.rs  nthash_simd.rs
src/old/: README  hpc_2bit.rs  kminmers-readwrite-main.rs  kminmers-readwrite.rs  nthash_hpc.rs.opt1  nthash_hpc.rs.opt2  nthash_hpc.rs.opt3  nthash_hpc.rs.opt4  nthash_hpc_simd_wip.rs
tests/: main.rs
