[package]
name = "rust-seq2kminmers"
authors = ["Rayan Chikhi <rayan.chikhi@pasteur.fr>", "Baris Ekim"]
description = "Construction and iteration of k-min-mers from a DNA sequence."
version = "0.1.0"
edition = "2021"
keywords = ["bioinformatics"]
categories = ["science", "algorithms"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array_tool = "1.0.3"
nthash = "0.5.1"
nthash32 = { git = "https://github.com/rchikhi/rust-nthash32"  }
thiserror = "1.0"
fxhash = "0.2.1"
#rust-parallelfastx = "0.1.1"
rust-parallelfastx = { git = "https://github.com/rchikhi/rust-parallelfastx"  }
rand = "^0.5"

[dev-dependencies]
criterion = "0.4.0"
quickcheck = "^0.7.1"
bencher = "0.1.5"

[[bench]]
name = "bench"
harness = false

#[profile.release]
#debug = true # for callgrind

#[profile.bench]
#debug = true
